--- a/index.htm
+++ b/index.htm
@@ -1235,7 +1235,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://zeitfuerx.de/" class="navigation-link" itemprop="url">
-    <span itemprop="name"></span>
+    <span itemprop="name">i_saw..</span>
 </a>                    </li>
                 </ul>
         <div data-vt-parameter="navigation_scrolled-to-end.navigation_main..." data-vt-link-id="#navigation"></div>
